--- a/package.json
+++ b/package.json
@@ -14,15 +14,29 @@
   "dependencies": {
     "hexo": "^6.3.0",
     "hexo-all-minifier": "^0.5.7",
+    "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-hey": "^0.4.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-redefine": "latest"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jiangwen5945/jiangwen5945.github.io.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jiangwen5945/jiangwen5945.github.io/issues"
+  },
+  "homepage": "https://github.com/jiangwen5945/jiangwen5945.github.io#readme",
+  "description": ""
 }
