edit blog theme 1.0.0

--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -50,7 +50,10 @@ style:
     title_color:
       light: "#fff" # first screen title color (light mode)
       dark: "#d1d1b6" # first screen title color (dark mode)
-    description: <h2>文以载道</h2><i>Writings are for conveying truth</i> # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
+    description: <h2>文以载道</h2> # the title in the middle of the first screen. HTML supported (e.g. svg html code of your logo)
+    subtitle: 
+      enable: true
+      list: ['Writings are for conveying truth', 'Take action to think, to change, to create.']
     custom_font: # custom font for the first screen
       enable: false
       font_family: # the font family name of the url below
