--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^2.0.0",
-    "hexo-hey": "^0.4.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
-    "hexo-server": "^3.0.0",
-    "hexo-theme-redefine": "latest"
+    "hexo-server": "^3.0.0"
   },
   "main": "index.js",
   "repository": {
