版本升级；文章整理

--- a/source/_data/essays.yml
+++ b/source/_data/essays.yml
@@ -1,12 +1,12 @@
-- content: 第一条说说内容
-  date: 2019-01-01 10:00:00 #说说日期
+- content: 科学可以让我们了解世界,而艺术则是让我们更好地了解自己 
+  date: 2019-04-13 10:00:00 #说说日期
 
-- content: 第二条说说内容
-  date: 2019-01-02 10:00:00
+- content: 科学是这个世界的伟大，而艺术是我们人类的伟大
+  date: 2019-11-22 11:00:00
   
 - content: |
-    说说测试，这是第四个，换行测试
-    说说测试，这是第四个，换行测试
-    说说测试，这是第四个，换行测试
-    说说测试，这是第四个，换行测试
-  date: 2019-01-04 10:00:00
+    说人生有三次成长。
+    一是发现自己不是世界中心的时候，
+    二是发现再怎么努力都无能为力的时候，
+    三是接受自己的平凡并去享受平凡的时候
+  date: 2021-01-04 08:22:30
