--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "hexo": "^6.3.0",
     "hexo-all-minifier": "^0.5.7",
+    "hexo-bilibili-card": "^0.6.1",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
@@ -24,7 +25,7 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-redefine": "^1.2.0"
+    "hexo-theme-redefine": "^2.0.1"
   },
   "main": "index.js",
   "repository": {
