--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,9 +1,4 @@
 - name: EvanNotFound
   link: https://www.evanluo.top
-  description: 香港记者月底加急
+  description: redefine
   avatar: https://evan.beee.top/avatar.png
-
-- name: lalallalala
-  link: https://example.com
-  description: lol
-  avatar: https://www.youtube.com/watch?v=dQw4w9WgXcQ
