--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -74,6 +74,10 @@ global:
   pjax: true
   # Whether to enable open graph
   open_graph: true
+  # Google Analytics
+  google_analytics:
+    enable: false # Whether to enable Google Analytics
+    id:  # Google Analytics Measurement ID
 # SITE CUSTOMIZATION <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
     
 
@@ -94,6 +98,8 @@ fontawesome: # Pro v6.2.1
 home_banner:
   # Whether to enable home banner
   enable: true
+  # style of home banner
+  style: static # static or fixed
   # Home banner image
   image: 
     light: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/c5340e3e880811ebb6edd017c2d2eca2.webp  # light mode
@@ -103,6 +109,9 @@ home_banner:
   # Home banner subtitle
   subtitle:
     text: ['Writings are for conveying truth', 'Take action to think, to change, to create.'] # subtitle text, array
+    hitokoto:  # 一言配置
+      enable: false # Whether to enable hitokoto
+      api: https://v1.hitokoto.cn # API URL, can add types, see https://developer.hitokoto.cn/sentence/#%E5%8F%A5%E5%AD%90%E7%B1%BB%E5%9E%8B-%E5%8F%82%E6%95%B0
     typing_speed: 100 # Typing speed (ms)
     backing_speed: 80 # Backing speed (ms)
     starting_delay: 500 # Start delay (ms)
@@ -132,7 +141,7 @@ home_banner:
   # Home banner social links
   social_links:
     # Whether to enable
-    enable: true
+    enable: false
     # Social links
     links:
       github: https://github.com/jiangwen5945  # your GitHub URL
@@ -185,9 +194,10 @@ navbar:
 home:
   # Sidebar settings
   sidebar:
-    enable: false # Whether to enable sidebar
-    position: right # Sidebar position. left, right
-    announcement: '欢迎来到我的个人博客...' # Announcement text
+    enable: true # Whether to enable sidebar
+    position: left # Sidebar position. left, right
+    first_item: menu # First item in sidebar. menu, info
+    announcement: # Announcement text
     links:
       Archives: 
         path: /archives 
@@ -220,6 +230,8 @@ articles:
     line_height: 1.5 # Line height
     image_border_radius: 14px # image border radius
     image_alignment: center # image alignment. left, center
+    image_caption: false # Whether to display image caption
+    link_icon: true # Whether to display link icon
   # Word count. Requires hexo-wordcount (npm install hexo-wordcount). See https://github.com/willin/hexo-wordcount
   word_count:
     enable: true # Whether to enable
@@ -229,7 +241,7 @@ articles:
   author_label: 
     enable: true # Whether to enable
     auto: false # Whether to automatically add author label, e.g. Lv1, Lv2, Lv3...
-    list: [""]
+    list: []
   # Code block settings
   code_block:
     copy: true # Whether to enable code block copy button
@@ -328,9 +340,10 @@ plugins:
   # RSS feed. Requires hexo-generator-feed (npm i hexo-generator-feed). See https://github.com/hexojs/hexo-generator-feed
   feed:
     enable: false # Whether to enable
-  # Aplayer (fixed). See https://github.com/DIYgod/APlayer
+  # Aplayer. See https://github.com/DIYgod/APlayer
   aplayer:
-    enable: true # Whether to enable
+    enable: false # Whether to enable
+    type: fixed # fixed, mini
     audios:
     - name: The Promise
       artist: Secret Garden
@@ -366,5 +379,9 @@ cdn:
   # Whether to enable CDN
   enable: false
   # CDN Provider
-  provider: unpkg # jsdelivr, unpkg, aliyun
+  provider: elemecdn # elemecdn, jsdelivr, unpkg, aliyun, custom
+  # Custom CDN URL
+  # format example: https://cdn.custom.com/hexo-theme-redefine/${version}/source/${path}
+  # The ${path} must be in the source folder of the theme
+  custom_url: 
 # CDN <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
