--- a/package.json
+++ b/package.json
@@ -2,41 +2,30 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "build": "hexo generate",
-    "clean": "hexo clean",
-    "deploy": "hexo deploy",
-    "server": "hexo server"
-  },
   "hexo": {
-    "version": "6.3.0"
+    "version": "5.4.2"
   },
   "dependencies": {
-    "hexo": "^6.3.0",
+    "hexo": "^5.4.2",
     "hexo-all-minifier": "^0.5.7",
-    "hexo-bilibili-card": "^0.6.1",
-    "hexo-deployer-git": "^4.0.0",
-    "hexo-generator-archive": "^2.0.0",
-    "hexo-generator-category": "^2.0.0",
-    "hexo-generator-index": "^3.0.0",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-searchdb": "^1.4.1",
-    "hexo-generator-tag": "^2.0.0",
+    "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^6.0.0",
-    "hexo-renderer-stylus": "^2.1.0",
-    "hexo-server": "^3.0.0",
-    "hexo-theme-redefine": "^2.6.3"
+    "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-stylus": "^2.0.1",
+    "hexo-server": "^2.0.0",
+    "hexo-theme-keep": "^3.4.7",
+    "hexo-theme-redefine": "^2.8.1",
+    "hexo-wordcount": "^6.0.1",
+    "nodejieba": "^3.4.3"
   },
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jiangwen5945/jiangwen5945.github.io.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jiangwen5945/jiangwen5945.github.io/issues"
-  },
-  "homepage": "https://github.com/jiangwen5945/jiangwen5945.github.io#readme",
-  "description": ""
+  "scripts": {
+    "dev": "hexo clean && hexo server -p $PORT",
+    "build": "hexo clean && hexo generate"
+  }
 }
