--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -34,7 +34,7 @@ defaults:
 # COLORS >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> start
 colors:
   #Primary color
-  primary: "#3e9ff9"
+  primary: "#354a86"
   # Secondary color (beta)
   secondary:
   # Default theme mode initial value (will be overwritten by prefer-color-scheme)
@@ -116,9 +116,9 @@ home_banner:
   style: static # static or fixed
   # Home banner image
   image: 
-    light: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/c5340e3e880811ebb6edd017c2d2eca2.webp  # light mode
+    light: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/light.webp  # light mode
     # light: /images/mode-light.webp   # light mode
-    dark: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/50bb6cb5cef84475bd912705b3d5da55.webp  # dark mode
+    dark: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/dark.webp  # dark mode
     # dark: /images/mode-dark.webp  # dark mode
   # Home banner title
   title: 文以载道
