--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "5.4.2"
   },
   "dependencies": {
+    "aplayer": "^1.10.1",
     "hexo": "^5.4.2",
     "hexo-all-minifier": "^0.5.7",
     "hexo-filter-mermaid-diagrams": "^1.0.5",
